--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,9 @@ packages = [
 "Changelog" = "https://github.com/34j/quaternion-unity/blob/main/CHANGELOG.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
+numpy = "^2.1.1"
+typing-extensions = "^4.12.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
